various frontend spacing adjustments. reduced some fixed/hardcoded width and lengths

--- a/frontend/src/app/app.component.css
+++ b/frontend/src/app/app.component.css
@@ -5,8 +5,9 @@
     /* align-items: flex-start; */
     padding: 0px;
     position: relative;
-    /* width: 100%; */
+    width: 100%;
     /* height: 100%; */
     flex-grow: 1;
+    align-self: stretch;
     background: #FFFFFF;
 }
