--- a/frontend/src/app/main/main-body/main-body.component.css
+++ b/frontend/src/app/main/main-body/main-body.component.css
@@ -4,8 +4,8 @@
     align-items: center;
     padding: 0px;
     gap: 24px;
-    width: 975px;
-    height: 708px;
+    /* width: 975px; */
+    /* height: 708px; */
     flex: none;
     order: 1;
     flex-grow: 1;
@@ -59,7 +59,7 @@
     height: 648px;
     flex: none;
     order: 0;
-    /* flex-grow: 4; */
+    flex-grow: 4;
 }
 .column_2{
     display: flex;
