--- a/frontend/src/app/main/main.component.css
+++ b/frontend/src/app/main/main.component.css
@@ -3,20 +3,21 @@
     flex-direction: column;
     align-items: center;
     padding: 32px 0px 48px;
-    gap: 32px;
+    gap: 20px;
     /* width: 1160px; */
     /* height: 960px; */
     background: #FDFCFC;
     flex: content;
+    align-self: stretch;
     order: 1;
-    flex-grow: 4;
+    flex-grow: 5;
 }
 .header_section{
     display: flex;
     flex-direction: column;
     align-items: center;
     padding: 0px;
-    gap: 24px;
+    /* gap: 24px; */
     /* width: 1160px; */
     /* width: 100%; */
     /* height: 862px; */
