--- a/frontend/src/app/sidebar/footer/footer.component.css
+++ b/frontend/src/app/sidebar/footer/footer.component.css
@@ -7,13 +7,13 @@
     align-items: flex-start;
     padding: 0px 16px 32px;
     gap: 24px;
-    width: 280px;
-    height: 96px;
+    /* width: 100%; */
+    /* height: 96px; */
     /* Inside auto layout */
     flex: none;
-    order: 1;
+    order: 3;
     align-self: stretch;
-    flex-grow: 0;
+    flex-grow: 1;
 }
 .footer_account{
     position: relative;
