--- a/frontend/src/app/sidebar/sidebar.component.css
+++ b/frontend/src/app/sidebar/sidebar.component.css
@@ -5,15 +5,16 @@
     display: flex;
     flex-direction: row;
     align-items: flex-start;
+    justify-content: space-between;
     padding: 0px;
-    width: 310px;
+    /* width: 310px; */
     height: 100%;
     background: #FFFFFF;
     border-right: 1px solid #EAECF0;
     flex: none;
     order: 0;
     align-self: stretch;
-    flex-grow: 0;
+    flex-grow: 1;
 }
 .sidebar_content{
     position: relative;
@@ -22,6 +23,7 @@
     justify-content: space-between;
     align-items: flex-start;
     padding-top: 15px;
+    /* gap: 24px; */
     /* width: 310px; */
     height: 100%;
     flex: none;
@@ -31,12 +33,12 @@
 }
 .sidebar_nav{
     position: relative;
-    display: flex;
+    /* display: flex; */
     flex-direction: column;
     align-items: flex-start;
-    padding: 32px 0px 0px;
+    padding: 20px 0px 0px;
     gap: 24px;
-    /* width: 280px; */
+    /* width: 100%; */
     /* height: 188px; */
     flex: none;
     order: 0;
