--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -4,6 +4,7 @@ body{
     /* width: 100%; */
     /* height: 100%; */
     display: flex;
+    align-self: stretch;
     min-height:100%;
 }
 @font-face {
